--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@fullcalendar/timegrid": "^6.1.15",
         "@primeng/themes": "^19.0.5",
         "chart.js": "4.4.2",
+        "jwt-decode": "^4.0.0",
         "ngx-toastr": "^19.0.0",
         "primeclt": "^0.1.5",
         "primeicons": "^7.0.0",
